[FEAT/#194] 수집 설정과 보고서 UX 및 자동 전달 개선